--- a/deployments/development/docker-compose.yml
+++ b/deployments/development/docker-compose.yml
@@ -35,6 +35,7 @@ services:
     working_dir: /usr/src/app
     volumes:
       - ../../server:/usr/src/app
+      - ../../pest-detection-uploads:/usr/src/app/static/uploads
     command: sh -c "npm install && npm run start:development"
     expose:
       - 8080
