--- a/client/package.json
+++ b/client/package.json
@@ -50,6 +50,7 @@
     "express": "~4.14.1",
     "extract-text-webpack-plugin": "^2.1.0",
     "fetch-intercept": "^2.2.3",
+    "fetch-progress": "^1.0.2",
     "file-loader": "^0.10.1",
     "font-awesome": "^4.7.0",
     "forever": "^0.15.3",
